--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <a-scene embedded arjs>
       <a-assets>
         <a-asset-item id="rose" src="rose.gltf"></a-asset-item>
-        <a-asset-item id="message" src="message.gltf"></a-asset-item>
       </a-assets>
       <a-entity camera></a-entity>
       <a-marker preset="hiro">
           <a-entity gltf-model="#rose" rotation="0 0 0" animation="property: rotation; to: 0 0 360; loop: true; dur: 10000" position="-1.5 0 0"></a-entity>
-          <a-entity gltf-model="#message" position="2 0 0" material="color: #d4af37"><a-entity>
+          <a-entity
+            text="value: Happy Birthday;
+            width: 10;
+            height: 10;
+            color: #ff8800;"
+            rotation="-90 0 0"
+            position="4 0 0">
+          </a-entity>
       </a-marker>
 
     </a-scene>
