--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
     <a-scene embedded arjs>
       <a-assets>
         <a-asset-item id="rose" src="rose.gltf"></a-asset-item>
+        <a-asset-item id="cake" src="cake.gltf"></a-asset-item>
       </a-assets>
       <a-entity camera></a-entity>
       <a-marker preset="hiro">
           <script>
             var parameters = location.search.substring(1).split("&");
             var temp = parameters[0].split("=");
-            l = unescape(temp[1]);
+            wish = unescape(temp[1]);
             temp = parameters[1].split("=");
-            p = unescape(temp[1]);
-            document.write("<a-entity gltf-model='#rose' rotation='0 0 0' animation='property: rotation; to: 0 0 360; loop: true; dur: 10000' position='-1.5 0 0'></a-entity>");
-            document.write("<a-entity text='value: "+l+"; width: 10; height: 10; color: #ff8800;' rotation='-90 0 0' position='4 0 0'></a-entity>");
+            icon = unescape(temp[1]);
+            document.write("<a-entity gltf-model='#cake' rotation='0 0 0' animation='property: rotation; to: 0 0 360; loop: true; dur: 10000' position='-1.75 0 0' scale='0.5 0.5 0.5'></a-entity>");
+            document.write("<a-entity text='value: Happy Birthday from both of us. We both doakan agar kakak panjang umur, murah rezeki dan di bawah perlindungan-Nya; width: 6; height: 10; color: #ff8800;' rotation='-90 0 0' position='3 0 0'></a-entity>");
+            document.write("<a-entity text='value: xoxo,\nFazreil and Farah Zahiah; width: 6; height: 10; color: #ff8800;' rotation='-90 0 0' position='3 0 1'></a-entity>");
           </script>
       </a-marker>
     </a-scene>
