--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a-asset-item id="cake" src="cake.gltf"></a-asset-item>
       </a-assets>
       <a-entity camera></a-entity>
-      <a-marker type="pattern" patternurl="pattern-hpbd.patt">
+      <a-marker type='pattern' url='pattern-hpbd.patt'>
           <script>
             var parameters = location.search.substring(1).split("&");
             var temp = parameters[0].split("=");
