--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             l = unescape(temp[1]);
             temp = parameters[1].split("=");
             p = unescape(temp[1]);
-            document.write("<a-entity gltf-model='#rose' rotation='0 0 0' animation='property: rotation; to: 0 0 360; loop: true; dur: 10000' position='-1.5 0 0'></a-entity>");
+            document.write("<a-entity gltf-model='#"+p+"' rotation='0 0 0' animation='property: rotation; to: 0 0 360; loop: true; dur: 10000' position='-1.5 0 0'></a-entity>");
             document.write("<a-entity text='value: "+l+"; width: 10; height: 10; color: #ff8800;' rotation='-90 0 0' position='4 0 0'></a-entity>");
           </script>
       </a-marker>
