--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <a-scene embedded arjs>
       <a-assets>
         <a-asset-item id="rose" src="rose.gltf"></a-asset-item>
+        <a-asset-item id="cake" src="cake.gltf"></a-asset-item>
       </a-assets>
       <a-entity camera></a-entity>
       <a-marker preset="hiro">
