change cake to version 2021

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <a-assets>
         <a-asset-item id="rose" src="rose.gltf"></a-asset-item>
         <a-asset-item id="cake" src="cake.gltf"></a-asset-item>
-        <a-asset-item id="bcake" src="cake.gltf"></a-asset-item>
+        <a-asset-item id="bcake" src="bcake.gltf"></a-asset-item>
       </a-assets>
       <a-entity camera></a-entity>
       <a-marker type='pattern' url='pattern-hpbd.patt'>
