--- a/index.html
+++ b/index.html
@@ -3,22 +3,18 @@
 <head>
   <meta name="apple-mobile-web-app-capable" content="yes">
   <script src="https://aframe.io/releases/1.0.0/aframe.min.js"></script>
+  <script src="https://rawgit.com/mayognaise/aframe-gif-shader/master/dist/aframe-gif-shader.min.js"></script>
   <script src="https://raw.githack.com/jeromeetienne/AR.js/2.1.5/aframe/build/aframe-ar.js"></script>
 </head>
   <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs>
       <a-assets>
         <a-asset-item id="cake" src="cake.gltf"></a-asset-item>
-        <video id="birthday22022022" loop="true" autoplay src="birthday22022022.webm" id="birthday22022022" webkit-playsinline playsinline></video>
-        <script>
-          document.getElementById('birthday22022022').play();
-        </script>
-
       </a-assets>
       <a-marker preset="hiro">
           <a-entity text='value: Semoga panjang umur + \nmurah rezeki + \nbahagia selalu! \n    - Mama, Farah & Fazreil; width: 5; height: 5; color: #ff8800;' rotation='-90 0 0' position='2 0 -2' align='center'><a-entity>
           <a-entity text='value: #22022022; width: 5; height: 5; color: #ff8855;' rotation='0 0 0' position='-2 0 -2' align='center'><a-entity>
-          <a-video src="#birthday22022022" width="2" height="1.125" position="-3.05 0 -2" rotation='0 0 0'></a-video>
+          <a-entity geometry="primitive:box;" material="shader:gif;src:url(birthday22022022.gif)" width=2 height=2 position="-3.05 0 -2" rotation='0 0 0'></a-entity>
           <a-entity gltf-model="#cake" rotation='90 0 0' position='-1.5 -1 -2' scale="0.25 0.25 0.25"></a-entity>
       </a-marker>
     </a-scene>
