--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
       <a-assets>
         <a-asset-item id="rose" src="rose.gltf"></a-asset-item>
         <a-asset-item id="cake" src="cake.gltf"></a-asset-item>
-        <video id="movie" loop="true" autoplay src="MOVIE.webm" id="movieVid" webkit-playsinline playsinline></video>
+        <video id="movie" loop="true" autoplay src="MOVIE.webm" id="movieVid" webkit-playsinline defaultMuted playsinline></video>
         <script>
           document.getElementById('movieVid').play();
         </script>
-        <video id="wish" loop="true" autoplay src="wish.webm" id="wishVid" webkit-playsinline playsinline></video>
+        <video id="wish" loop="true" autoplay src="wish.webm" id="wishVid" webkit-playsinline defaultMuted playsinline></video>
         <script>
           document.getElementById('wishVid').play();
         </script>
